--- a/index.css
+++ b/index.css
@@ -46,9 +46,9 @@ nav
 {
     width: 100%;
     min-height: 100vh;
-    justify-content:space-between;
+    justify-content:space-around;
     align-items: center;
-    padding: 70px 10% 10px;
+    padding: 70px 20px  10px;
     color: var(--white);
     background-color:var(--black);
 }
@@ -65,6 +65,7 @@ nav
     height: 400px;
     background: url("./image/home.gif") center ;
     background-size: cover;
+    background-position: center;
     border-radius: 50%;
     animation: 5s linear infinite image;
     box-shadow: 0px 0px 20px 3px var(--sky_blue); 
@@ -122,7 +123,7 @@ nav
 }
 .personal-detail .detail-heading
 {
-    width: 200px;
+    width: 250px;
     font-weight: bold;
 }
 /*--------------------- Resume Download Botton -----------------*/
@@ -156,25 +157,33 @@ nav
     padding-left: 30px;
 }
 /*--------------- Education Overall Div -------------*/
+.edu-box{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
+}
 .edu-box1,.edu-box2
 {
-    min-height: 100vh;
-    width: 50%;
+    padding: 10px;
+    flex-wrap: wrap;
+}
+.edu-box3{
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    flex-wrap: wrap;
-}
-.edu-box1{
-    border-right: 3px solid var(--white);
+    height: 700px;
+    border:2px solid var(--white);
+    max-width: 1px;
 }
 .edu-box1 div,.edu-box2 div{
-    width: 430px;
     height: 230px;
 }
 /*----------------- PG, UG, School Design -------------*/
 .it,.bca,.hsl{
+    width: 420px;
     box-shadow: 1px 1px 3px 1px var(--white);
     border-radius: 10px;
     display: flex;
@@ -182,6 +191,7 @@ nav
     flex-direction: column;
     padding:30px 20px;
     font-weight: bold;
+    margin: 10px;
 }
 .year
 {
@@ -202,8 +212,7 @@ nav
 .circle
 {
     font-size: 50px;
-    position: relative;
-    right: 25px;
+    display: block;
 }
 /*------------------- Skills Design ----------------------*/
 .skill{
@@ -379,19 +388,21 @@ nav
     } 
     /*----------------------- Education Design -------------------*/
     .edu-box{
-        flex-wrap: wrap;
-    }
-    .edu-box1,.edu-box2{
         width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
     }
-    .edu-box1{
-        border-right: none;
+    .edu-box2,.edu-box1{
+        width: 100%;
+        padding: 10px;
+    }
+    .edu-box3{
+        display: none;
     }
     .arrow,.circle{
         visibility: hidden;
+    }
+    .it,.bca,.hsl {
+        width:100%;
+        padding: 10px;
     }
 }
 
